--- a/AngularOne/AngularOne/src/app/components/dish-detail/dish-detail.component.html
+++ b/AngularOne/AngularOne/src/app/components/dish-detail/dish-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <div class="row">
+    <div class="row" *ngIf="dish">
         <div class="col-6">
-            <mat-card>
+            <mat-card >
                 <mat-card-header>
                     <mat-card-title>
                         {{dish.name}}
@@ -23,7 +23,7 @@
                 <mat-card-header>
                     <mat-card-title>Comments</mat-card-title>
                 </mat-card-header>
-                <mat-card-content *ngFor="let comment of comments">
+                <mat-card-content *ngFor="let comment of dish.comments">
                     <p>{{comment.comment}}</p>
                     <p>~ {{comment.author}} {{comment.date | date}}</p>
                     <p mat-line></p>
