--- a/AngularOne/AngularOne/src/app/app.component.html
+++ b/AngularOne/AngularOne/src/app/app.component.html
@@ -1,7 +1,3 @@
-<div class="container-fluid bg-primary opacity-80">
-
-  <h3 class="text-light p-3">Restaurant</h3>
-
-</div>
-
+<app-header></app-header>
 <app-menu></app-menu>
+<app-footer></app-footer>
