Basic Routing Added

--- a/AngularOne/AngularOne/src/app/components/header/header.component.html
+++ b/AngularOne/AngularOne/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar color="primary" class="mat-style">
     <span><img src="/assets/images/logo.png" height=30 width=41></span>
-    <a mat-button><span class="fa fa-home fa-lg"></span> Home</a>
-    <a mat-button><span class="fa fa-info fa-lg"></span> About</a>
-    <a mat-button><span class="fa fa-list fa-lg"></span> Menu</a>
-    <a mat-button><span class="fa fa-address-card fa-lg"></span> Contact</a>
+    <a mat-button routerLink="/home"><span class="fa fa-home fa-lg"></span> Home</a>
+    <a mat-button routerLink="/about"><span class="fa fa-info fa-lg"></span> About</a>
+    <a mat-button routerLink="/menu"><span class="fa fa-list fa-lg"></span> Menu</a>
+    <a mat-button routerLink="/contact"><span class="fa fa-address-card fa-lg"></span> Contact</a>
 </mat-toolbar>
   
   <div class="container-clg jumbotron">
@@ -14,8 +14,8 @@
             <div class="col-12 col-md-6 mt-4">
                 
                 <div>
-                    <h1 class="text-white">Ristorante Con Fusion</h1>
-                    <p class="text-white">We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations
+                    <h1 class="text-white b" style="font-weight: bolder; padding: 2%;">Ristorante Con Fusion</h1>
+                    <p class="text-white b" style="padding: 2%;">We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations
                     will tickle your culinary senses!</p>
                 </div>
             
