--- a/AngularOne/AngularOne/src/app/components/dish-detail/dish-detail.component.html
+++ b/AngularOne/AngularOne/src/app/components/dish-detail/dish-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row" *ngIf="dish">
-        <div class="col-6">
+        <div class="col-12 col-sm-6">
             <mat-card >
                 <mat-card-header>
                     <mat-card-title>
@@ -18,7 +18,7 @@
             </mat-card>
             <!-- <h1>Display the detais of dish here</h1> -->
         </div>
-        <div class="col-6">
+        <div class="col-12 col-sm-6">
             <mat-card>
                 <mat-card-header>
                     <mat-card-title>Comments</mat-card-title>
