--- a/AngularOne/AngularOne/src/app/components/footer/footer.component.html
+++ b/AngularOne/AngularOne/src/app/components/footer/footer.component.html
@@ -6,10 +6,10 @@
                     <div class="col-6 col-sm-6 col-md-4">
                         <h4>Links</h4>
                         <mat-list>
-                            <mat-list-item><a mat-button>Home</a></mat-list-item>
-                            <mat-list-item><a mat-button>About</a></mat-list-item>
-                            <mat-list-item><a mat-button>Menu</a></mat-list-item>
-                            <mat-list-item><a mat-button>Contact</a></mat-list-item>
+                            <mat-list-item><a routerLink="/home" mat-button>Home</a></mat-list-item>
+                            <mat-list-item><a routerLink="/about" mat-button>About</a></mat-list-item>
+                            <mat-list-item><a routerLink="/menu" mat-button>Menu</a></mat-list-item>
+                            <mat-list-item><a routerLink="/contact" mat-button>Contact</a></mat-list-item>
                         </mat-list>
                     </div>
                     <div class="col-6 col-sm-6 col-md-4">
