Template Driven Forms Part 1

--- a/AngularOne/src/app/components/home/home.component.html
+++ b/AngularOne/src/app/components/home/home.component.html
@@ -53,5 +53,10 @@
 
     </div>
 
+    <div class="container text-center">
+
+        <button mat-button type="button" (click)="popUpMenu()" class="btn btn-light m-2 btn-large">Menu</button>
+
+    </div>
 
 </div>
