--- a/AngularOne/src/app/components/dish-detail/dish-detail.component.html
+++ b/AngularOne/src/app/components/dish-detail/dish-detail.component.html
@@ -33,4 +33,9 @@
         </div>
 
     </div>
+    <div [hidden]="dish">
+        <mat-spinner>
+            <h2>Loading ...Please Wait</h2>
+        </mat-spinner>
+    </div>
 </div>
