--- a/AngularOne/src/app/components/home/home.component.html
+++ b/AngularOne/src/app/components/home/home.component.html
@@ -16,6 +16,9 @@
                 </mat-card-content>
             </mat-card>
         
+            <div [hidden]="dish">
+                <mat-spinner>Loading ...</mat-spinner>
+            </div>
         </div>
         <div class="col-12 col-md-4">
             
@@ -32,6 +35,9 @@
                 </p>
                 </mat-card-content>
             </mat-card>
+            <div [hidden]="promotion">
+                <mat-spinner></mat-spinner>
+            </div>
         </div>
 
         <div class="col-12 col-md-4">
