--- a/AngularOne/src/app/components/menu/menu.component.html
+++ b/AngularOne/src/app/components/menu/menu.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-    <div fxFlex>
+    <div fxFlex *ngIf="dishes">
             
         <mat-grid-list cols="2" rowHeight="220px"> 
             <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail',dish.id]">
@@ -22,5 +22,10 @@
         </mat-grid-list>
     
     </div>    
-    
+    <div fxFlex [hidden]="dishes">
+        <mat-spinner>
+            <h4>Loading ... Please wait</h4>
+        </mat-spinner>
+    </div>
+
 </div>
