--- a/AngularOne/src/app/components/about/about.component.html
+++ b/AngularOne/src/app/components/about/about.component.html
@@ -58,7 +58,7 @@
     <h2>Corporate Leadership</h2>
     <p>Display the details of the corporate leaders here</p>
     
-    <div class="container">
+    <div class="container" *ngIf="leaders" >
         <div class="row mt-2" *ngFor="let leader of leaders">
             <div class="col-1">
                 <img mat-card-avatar src="{{leader.image}}" alt="{{leader.name}}">
@@ -71,7 +71,10 @@
                 </div>
             </div>
         </div>
+     
     </div>
-
+    <div [hidden]="leaders">
+      <mat-spinner></mat-spinner>
+    </div>
   </div>
 </div>
