--- a/AngularOne/src/app/components/dish-detail/dish-detail.component.html
+++ b/AngularOne/src/app/components/dish-detail/dish-detail.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div class="row" *ngIf="dish">
+<div class="container" *ngIf="dish">
+    <div class="row">
         <div class="col-12 col-sm-6">
             <mat-card >
                 <mat-card-header>
@@ -7,13 +7,20 @@
                         {{dish.name}}
                     </mat-card-title>
                 </mat-card-header>
-                <img mat-card-image src="{{dish.image}}" alt="{{dish.name}}">
+                <img mat-card-image src="{{BaseURL + dish.image}}" alt="{{dish.name}}">
                 <mat-card-content>
                     <p>{{dish.description}}</p>
                     <mat-card-actions>
+                        <button mat-button [routerLink]="['/dishdetail',prev]">
+                            <span class="fa fa-chevron-left fa-lg"></span>
+                        </button>
                         <button mat-button (click)="goBack()">BACK</button>
                         <button mat-button>LIKE</button>
                         <button mat-button>SHARE</button>
+                        <span class="flex-spacer"></span>
+                        <button mat-button [routerLink]="['/dishdetail',next]">
+                            <span class="fa fa-chevron-right fa-lg"></span>
+                        </button>
                     </mat-card-actions>
                 </mat-card-content>
             </mat-card>
