--- a/AngularOne/src/app/components/home/home.component.html
+++ b/AngularOne/src/app/components/home/home.component.html
@@ -9,8 +9,8 @@
                     <h3>{{dish.name | uppercase}}</h3>
                 </mat-card-title>
                 </mat-card-header>
-                <img mat-card-image src={{dish.image}} alt={{dish.name}}>
-                <mat-card-content>
+                <img mat-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
+                <mat-card-content> 
                 <p>{{dish.description}}
                 </p>
                 </mat-card-content>
@@ -56,7 +56,9 @@
                 </mat-card-content>
             </mat-card>
         </div>
-
+        <div [hidden]="leader">
+            <mat-spinner></mat-spinner>
+        </div>
     </div>
 
     <div class="container text-center">
