--- a/AngularOne/src/app/components/menu/menu.component.html
+++ b/AngularOne/src/app/components/menu/menu.component.html
@@ -13,7 +13,7 @@
         <mat-grid-list cols="2" rowHeight="220px"> 
             <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail',dish.id]">
               
-                <img width="200px" height="200px"  src={{dish.image}} alt="{{dish.name}}">
+                <img width="200px" height="200px"  src="{{BaseURL + dish.image}}" alt="{{dish.name}}">
                 <mat-grid-tile-footer>
                     <h1 matLine>{{dish.name | uppercase}}</h1>
                 </mat-grid-tile-footer>
