--- a/AngularOne/src/app/components/menu/menu.component.css
+++ b/AngularOne/src/app/components/menu/menu.component.css
@@ -1,3 +1,10 @@
 .mt-5{
     margin-top: 20px;
 }
+
+.highlight{
+    background-color: aqua;
+    border : 1px solid blueviolet;
+    z-index: 1;
+    transform: scale(1.01);
+}
